<resources>
    <string name="app_name">EntertainmentApp</string>
    <string name="login">Login Page</string>
    <string name="avatar_of_male_female">avatar of male/female</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="sign_up_btn">Sign up</string>
    <string name="login_btn">Login</string>
    <string name="first_name">First name</string>
    <string name="remember_me">Remember me</string>
    <string name="feed_back_label_for_login_sign_in_action">feed back label for login/ sign in action</string>
    <string name="sign_up_page_label">Sign up page</string>
    <string name="ny_times_logo_description">ny times logo</string>
    <string name="new_york_times_label">New York times</string>
    <string name="russia_today_label">Russia Today</string>
    <string name="bbc_label">BBC</string>
    <string name="aljazeera_label">Aljazeera</string>
    <string name="cnn_label">CNN</string>
    <string name="fox_news_label">Fox news</string>
    <string name="aljazeera_channel_icon">aljazeera channel icon</string>
    <string name="bbc_channel_icon">BBC channel icon</string>
    <string name="cnn_channel_icon">cnn channel icon</string>
    <string name="fox_new_channel_icon">fox new channel icon</string>
    <string name="russia_today_channel_icon">russia Today channel icon</string>
    <string name="search_for_news">search for news</string>
    <string name="button_with_search_image">button with search</string>
    <string name="or_click_to_see_latest_news_from">CHOOSE A CHANNEL</string>
    <string name="news_logo">news logo</string>
    <string name="news_section">News Section</string>
    <string name="entertainment_section">Entertainment section</string>
    <string name="image_of_masks">image of masks</string>
    <string name="what_are_you_looking_for">What are you looking for</string>
    <string name="welcome">Welcome</string>
    <string name="news_page_label">News Page</string>
    <string name="looking_for_specific_news">Looking for Specific News</string>
    <string name="icon_of_someone_looking_for_news">icon of someone looking for news</string>
    <string name="someone_running_in_hurry">someone running in hurry</string>
    <string name="in_hurry_wanna_see_latest_news">In hurry, wanna see latest news</string>
    <string name="are_you">Are You</string>
    <string name="or">OR</string>
    <string name="check_your_news">Check Your News</string>
    <string name="save_the_news_list">Save the news list</string>
    <string name="edit_button">edit button</string>
    <string name="close">Close</string>
    <string name="description">description</string>
    <string name="save_this">save this</string>
    <string name="news_title">news title</string>
    <string name="publish_date">publish date</string>
    <string name="icon_of_going_back_in_time">icon of going back in time</string>
    <string name="view_your_saved_news">View Your Saved News</string>
    <string name="you_don_t_have_any_saved_news_yet">You Didn\'t Save Any News Yet</string>
    <string name="saved_news_page">Saved News Page</string>
    <string name="wanna_hear_a_joke">Wanna Hear a Joke?</string>
    <string name="welcome_to_the_fun_section">Welcome To the Fun Section</string>
    <string name="generate_another_joke">Generate Another Joke</string>
    <string name="no_news_were_found_with_the_following_specifics">No News Were Found With The Following Specifics</string>
    <string name="query">Query:</string>
    <string name="category">Category:</string>
    <string name="channel">Channel:</string>
    <string name="go_back">Go Back</string>
    <string name="clear_selections">Clear Selections</string>
</resources>