<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="top|center"
    android:background="@drawable/linear_gradient">

    <TextView
        android:id="@+id/activityLabel"
        android:text="@string/login"
        android:layout_marginTop="50dp"
        style="@style/pageLabel"
        />
    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/user"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/avatar_of_male_female"
        android:background="@drawable/image_bg"/>

    <EditText
        android:id="@+id/email"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"
        style="@style/EditTextStyle"/>
    <EditText
        android:id="@+id/password"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:autofillHints="password"
        style="@style/EditTextStyle"/>
    <CheckBox
        android:id="@+id/rememberCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_me"
        android:textSize="14sp"
        android:layout_marginRight="32dp"
        android:textColor="@color/text"
        />
    <Button
        android:id="@+id/loginButton"
        android:text="@string/login_btn"
        android:layout_marginTop="20dp"
        style="@style/ButtonStyle"
        />

    <Button
        android:id="@+id/signButton"
        android:text="@string/sign_up_btn"
        style="@style/SecondaryButtonStyle" />

</androidx.appcompat.widget.LinearLayoutCompat>