<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top|center"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:layout_marginVertical="60dp"
    android:background="@drawable/linear_gradient">

<!-- note this is an alert dialog, so it won't show in the app like it's in the emulator now
i will center it in the runtime, so please hold up before grading it, and see the result while running the app-->
    <TextView
        android:id="@+id/pageLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_news_were_found_with_the_following_specifics"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textAlignment="center"
        android:textColor="@color/cardText"
        android:layout_marginVertical="10dp"/>

     <TextView
        android:id="@+id/queryTextView"
         android:text="@string/query"
        style="@style/dialogText"
  />

    <TextView
        android:id="@+id/categoryTextView"
        android:text="@string/category"
        style="@style/dialogText"
        />

    <TextView
        android:id="@+id/channelTextView"
        android:text="@string/channel"
        style="@style/dialogText"
        />

    <Button
        android:id="@+id/goBackButton"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/go_back"
        android:backgroundTint="@color/mainButton"
        android:textColor="@color/text"
        android:layout_marginTop="20dp"
        android:textAlignment="center"/>



</androidx.appcompat.widget.LinearLayoutCompat>
