<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top|center"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:layout_marginVertical="60dp"
    android:background="@drawable/linear_gradient">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:scrollbars="vertical"
        android:layout_marginHorizontal="10dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/newsTitleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/news_title"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="#8F000000"
                android:textAlignment="center"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#6D4F6F52" />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/publish_date"
                android:layout_marginTop="10dp"
                android:layout_gravity="end"
                android:textStyle="bold"
                android:textColor="#3770AE"/>

            <TextView
                android:id="@+id/newsContentTextView"
                android:layout_width="match_parent"
                android:layout_height="450dp"
                android:textColor="@color/white"
                android:text="@string/description"
                android:layout_marginTop="10dp"
                android:paddingHorizontal="5dp"
                android:textAlignment="textStart"
                style="@style/dialogText"
                />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp">
        <Button
            android:id="@+id/closeButton"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/close"
            android:layout_marginHorizontal="5dp"
            android:backgroundTint="#4AE40D2E"
            android:textColor="@color/text"/>

        <Button
            android:id="@+id/saveButton"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/save_this"
            android:textColor="@color/text"
            android:backgroundTint="@color/mainButton"/>

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.appcompat.widget.LinearLayoutCompat>
